app/src/main/java/com/example/calcomanias_rocket/app/errors/DatabaseErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

import com.example.calcomanias_rocket.R

class DatabaseErrorUiModel(private val onClick: (() -> Unit)? = null) : ErrorUiModel {

}